Quorum3/Library/Tests/Inheritance/Pass/MultipleInheritanceCallingAmbiguousBlueprints.quorum
class Main
    action Main
        GrandChildWithMultiple c
        c:Breaker()
    end
end