Quorum3/Library/Tests/Inheritance/Fail/C.quorum
class C
    action foo()
        output "c"
    end
end